--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -14,6 +14,10 @@
         <h3>Employee directory</h3>
         <hr>
 
+        <a th:href="@{/employees/showFormForAdd}" class="btn btn-primary btn-sm mb-3">
+            Add Employee
+        </a>
+
         <table class="table table-bordered table-striped">
             <thead class="table-dark">
                 <tr>
