--- a/src/main/resources/templates/employees/employee-form.html
+++ b/src/main/resources/templates/employees/employee-form.html
@@ -16,17 +16,20 @@
 
     <p class="h4 mb-4">Save employee</p>
 
-    <form action="#" th:action="@{/employees/save}" th:object="@{employee}" method="post">
+    <form action="#" th:action="@{/employees/save}" th:object="${employee}" method="post">
 
-      <input type="text" th:field="*{firstName}" class="form-control mb-4 w-25" placeholder="First Name">
+      <input type="text" th:field="*{firstName}" class="form-control mb-4 w-25" placeholder="First Name"/>
 
-      <input type="text" th:field="*{lastName}" class="form-control mb-4 w-25" placeholder="Last Name">
+      <input type="text" th:field="*{lastName}" class="form-control mb-4 w-25" placeholder="Last Name"/>
 
-      <input type="text" th:field="*{email}" class="form-control mb-4 w-25" placeholder="Email">
+      <input type="text" th:field="*{email}" class="form-control mb-4 w-25" placeholder="Email"/>
 
       <button type="submit" class="btn btn-info col-2">Save</button>
 
     </form>
+
+    <hr>
+    <a th:href="@{/employees/list}">Back to Employees List</a>
   </div>
 
 </body>
