--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -23,7 +23,8 @@
                 <tr>
                     <th>First name</th>
                     <th>Last name</th>
-                    <th>email</th>
+                    <th>Email</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -31,6 +32,11 @@
                     <td th:text="${tempEmployee.firstName}"/>
                     <td th:text="${tempEmployee.lastName}"/>
                     <td th:text="${tempEmployee.email}"/>
+                    <td>
+                        <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}" class="btn btn-info btn-sm">
+                            Update
+                        </a>
+                    </td>
                 </tr>
             </tbody>
         </table>
